Add margin to ad-text p(nth3)

--- a/style-homepage-mstore.css
+++ b/style-homepage-mstore.css
@@ -280,9 +280,10 @@ h3 {
 }
 
 .ad-top-text p:nth-child(3) {
+  margin-top: 16px;
+  margin-bottom: 26px;
   font-size: 14px;
   font-style: italic;
-  line-height: 72px;
   color: #252525;
 }
 
