--- a/style-homepage-mstore.css
+++ b/style-homepage-mstore.css
@@ -36,7 +36,7 @@ h3 {
 }
 
 .wrapper-center {
-  width: 1200px;
+  width: 1170px;
   margin: 0 auto;
   padding: 0;
 }
@@ -62,7 +62,6 @@ h3 {
   width: 285px;
   align-items: center;
   margin: 0;
-  padding-left: 15px;
 }
 
 .header-contacts > span {
@@ -77,7 +76,6 @@ h3 {
   width: 285px;
   align-items: center;
   margin: 0;
-  padding-right: 15px;
 }
 
 .header-choice > span {
@@ -130,7 +128,6 @@ h3 {
   letter-spacing: -0.075em;
   font-weight: 700;
   margin: 0;
-  margin-left: 15px;
   padding: 0;
 }
 
@@ -151,7 +148,6 @@ h3 {
 
 .user-menu {
   width: 285px;
-  margin-right: 15px;
 }
 
 .header-nav-list {
@@ -344,8 +340,7 @@ h3 {
   position: relative;
   width: 270px;
   margin: 0;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-right: 30px;
   padding-left: 70px;
   box-sizing: border-box;
 }
@@ -356,7 +351,8 @@ h3 {
   font-family: "Roboto", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 700;
-  line-height: 24px;
+  text-transform: uppercase;
+  line-height: 20px;
   letter-spacing: 0.075em;
   color: #252525;
 }
@@ -587,7 +583,7 @@ h3 {
   display: flex;
   align-items: center;
   height: 84px;
-  margin: 0 15px;
+  margin: 0;
   padding: 0;
 }
 
@@ -614,7 +610,7 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 15px;
+  margin: 0;
   padding: 0;
 }
 
@@ -623,9 +619,6 @@ h3 {
   width: 270px;
   height: 415px;
   margin-bottom: 30px;
-  
-/*  Для сеток*/
-  box-shadow: 0 0 0 1px pink;
 }
 
 .feauture-product-list .items {
@@ -635,6 +628,8 @@ h3 {
   justify-content: flex-end;
   width: 100%;
   height: 415px;
+  margin: 0;
+  padding: 0;
 }
   
 .feauture-product-list > li .item-1{
@@ -644,9 +639,31 @@ h3 {
 }
 
 .item-2 {
+  position: relative;
   background-image: url(img/HollisterBackyardSweatshirt.jpg);
   background-repeat: no-repeat;
   background-position: top;
+}
+
+.item-2::after {
+  position: absolute;
+  top: -21px;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 21px;
+  width: 50px;
+  font-size: 10px;
+  font-weight: 300px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #ff0000;
+  background-color: #ffff00;
+  transform: rotate(90deg);
+  transform-origin: left bottom;
+  content: "hot"
 }
 
 .item-3 {
@@ -661,10 +678,52 @@ h3 {
   background-position: top;
 }
 
+.item-4::after {
+  position: absolute;
+  top: -21px;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 21px;
+  width: 50px;
+  font-size: 10px;
+  font-weight: 300px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #00c8c8;
+  transform: rotate(90deg);
+  transform-origin: left bottom;
+  content: "new"
+}
+
 .item-5 {
   background-image: url(img/BackyardSweatShirt.jpg);
   background-repeat: no-repeat;
   background-position: top;
+}
+
+.item-5::after {
+  position: absolute;
+  top: -21px;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 21px;
+  width: 50px;
+  font-size: 10px;
+  font-weight: 300px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #ed1c24;
+  transform: rotate(90deg);
+  transform-origin: left bottom;
+  content: "sale"
 }
 
 .item-6 {
@@ -689,7 +748,7 @@ h3 {
   position: absolute;
   top: 275px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 270px;
   height: 40px;
@@ -697,6 +756,10 @@ h3 {
   opacity: 0;
   transition-duration: 0.8s;
   transition-property: opacity;
+}
+
+.pop-up .wishlist-card-btn {
+  margin: 0 28px;
 }
 
 .items:hover .pop-up {
@@ -721,8 +784,108 @@ h3 {
 }
 
 .product-name {
+  margin-bottom: 3px;
   font-size: 14px;
   font-weight: 300px;
+  line-height: auto;
   letter-spacing: 0.05em;
   color: #555555;
+}
+
+
+
+.product-price {
+  margin: 0;
+  margin-bottom: 5px;
+  padding: 0;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.05em;
+  color: #252525;
+}
+
+.product-price del {
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 24px;
+  letter-spacing: 0.05em;
+  color: #898989;
+}
+
+.poduct-link {
+  opacity: 1;
+}
+
+.product-name:hover,
+.poduct-name:focus {
+  opacity: 0.6;
+}
+
+.product-name:active {
+  opacity: 1;
+}
+
+.ad-bottom {
+  width: 1170px;
+  height: 200px;
+  margin: 20px auto 30px auto;
+  background-color: #2f4ba0;
+  background-image: url(img/BackgroundAdBottom.jpg);
+}
+
+.ad-bottom-text {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  margin-left: 576px;
+  padding: 0;
+}
+
+.ad-bottom-text > p {
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.ad-bottom-text > a:hover,
+.ad-bottom-text > a:focus {
+  opacity: 0.7;
+}
+
+.ad-bottom-text > a:active {
+  opacity: 0.5;
+}
+
+.ad-bottom-text .ad-bottom-text-item-1 {
+  margin-top: 25px;
+  font-size: 18px;
+  font-weight: 900;
+  letter-spacing: 0.1em;
+}
+
+.ad-bottom-text .ad-bottom-text-item-2 {
+  width: 398px;
+  font-size: 24px;
+  font-weight: 300;
+  text-align: center;
+  letter-spacing: 0.2em;
+  color: #252525;
+  background-color: #ffffff;
+}
+
+.ad-bottom-text-item-3 {
+  font-size: 60px;
+  font-weight: 900;
+  letter-spacing: -0.05em;
+  line-height: 60px;
+}
+
+.ad-bottom-text-item-4 {
+  margin-top: 10px;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 0.1em;
+  color: #636363;
 }
