--- a/style-homepage-mstore.css
+++ b/style-homepage-mstore.css
@@ -3,7 +3,6 @@ body {
   min-width: 1200px;
   font-family: "Roboto", "Arial", sans-serif;
   font-size: 12px;
-  line-height: auto;
   padding: 0;
   margin: 0;
   background-color: #ffffff;
@@ -35,7 +34,11 @@ h3 {
   padding: 0;
 }
 
-.wrapper-center {
+button {
+  outline: none;
+}
+
+.inner-center {
   width: 1170px;
   margin: 0 auto;
   padding: 0;
@@ -162,8 +165,6 @@ h3 {
   display: flex;
   align-items: center;
   height: 65px;
-  
-  border: 
 }
 
 
@@ -294,7 +295,6 @@ h3 {
   text-decoration: none;
   font-weight: 700;
   letter-spacing: 0.01em;
-  line-height: auto;
   text-transform: uppercase;
   color: #111111;
 }
@@ -321,17 +321,16 @@ h3 {
 .sopping-support-retum {
   display: flex;
   align-items: center;
-  widows: 100%;
+  width: 100%;
   height: 95px;
   margin: 0;
   padding: 0;
 }
 
 .sopping-support-retum-list {
-  
   display: flex;
   justify-content: space-between;
-  align-items: center
+  align-items: center;
   margin: 0;
   padding: 0;
 }
@@ -564,7 +563,6 @@ h3 {
   font-weight: 300;
   font-size: 12px;
   letter-spacing: 0.1em;
-  line-height: auto;
   color: #636363;
 }
 
@@ -576,7 +574,7 @@ h3 {
   flex-grow: 1;
   font-size: 24px;
   font-weight: 500;
-  color: :#252525;
+  color: #252525;
 }
 
 .block-for-title {
@@ -656,7 +654,7 @@ h3 {
   height: 21px;
   width: 50px;
   font-size: 10px;
-  font-weight: 300px;
+  font-weight: 500;
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #ff0000;
@@ -689,7 +687,7 @@ h3 {
   height: 21px;
   width: 50px;
   font-size: 10px;
-  font-weight: 300px;
+  font-weight: 500;
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #ffffff;
@@ -716,7 +714,7 @@ h3 {
   height: 21px;
   width: 50px;
   font-size: 10px;
-  font-weight: 300px;
+  font-weight: 500;
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #ffffff;
@@ -770,16 +768,19 @@ h3 {
   cursor: pointer;
   border: none;
   background-color: transparent;
+}
+
+.pop-up > button img {
   transition-duration: 0.3s, 0.2s;
   transition-property: opacity, transform;
 }
 
-.pop-up > button:hover,
-.pop-up > button:focus {
+.pop-up > button:hover img,
+.pop-up > button:focus  img{
   opacity: 0.6;
 }
 
-.pop-up > button:active {
+.pop-up > button:active img {
   transform: scale(1.1);
 }
 
@@ -787,12 +788,9 @@ h3 {
   margin-bottom: 3px;
   font-size: 14px;
   font-weight: 300px;
-  line-height: auto;
   letter-spacing: 0.05em;
   color: #555555;
 }
-
-
 
 .product-price {
   margin: 0;
@@ -855,7 +853,7 @@ h3 {
 }
 
 .ad-bottom-text > a:active {
-  opacity: 0.5;
+  opacity: 1;
 }
 
 .ad-bottom-text .ad-bottom-text-item-1 {
