--- a/style-homepage-mstore.css
+++ b/style-homepage-mstore.css
@@ -118,26 +118,24 @@ button {
 }
 
 .main-logo {
+  position: relative;
   width: 285px;
   margin: 0;
   padding: 0;
-}
-
-.main-logo > p {
-  position: relative;
   font-family: "Ancuu", "Arial", sans-serif;
   font-size: 36px;
   line-height: 40px;
   letter-spacing: -0.075em;
   font-weight: 700;
-  margin: 0;
-  padding: 0;
+
 }
 
-.main-logo > p::after {
+
+
+.main-logo::after {
   position: absolute;
-  top: 29px;
-  left: 88px;
+  top: 70%;
+  left: 31%;
   content: " ";
   width: 7px;
   height: 7px;
@@ -178,8 +176,8 @@ button {
   color: #464646;
   box-sizing: border-box;
   border: 4px solid rgba(0, 0, 0, 0);
-  transition-duration: 0.3s;
-  transition-property: color;
+  transition-duration: 0.3s, 0.2s;
+  transition-property: color. border;
 }
 
 .header-nav-list li a:hover,
@@ -1140,6 +1138,8 @@ button {
 .email-subscription-form {
   width: 670px;
   height: 40px;
+  padding-left: 20px;
+  box-sizing: border-box;
 }
 
 .email-subscription-buttom {
