--- a/style-homepage-mstore.css
+++ b/style-homepage-mstore.css
@@ -281,6 +281,7 @@ button {
   margin-top: 16px;
   margin-bottom: 26px;
   font-size: 14px;
+  font-weight: 300;
   font-style: italic;
   color: #252525;
 }
