--- a/style-homepage-mstore.css
+++ b/style-homepage-mstore.css
@@ -76,6 +76,11 @@ button {
   margin: 0;
 }
 
+.page-header__contacts span {
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
 .page-header__choice span {
   margin-left: 12px;
   margin-right: 12px;
@@ -131,11 +136,8 @@ button {
   width: 285px;
   margin: 0;
   padding: 0;
-  font-family: "Ancuu", "Arial", sans-serif;
   font-size: 36px;
-  line-height: 40px;
   letter-spacing: -0.075em;
-  font-weight: 700;
 
 }
 
@@ -251,8 +253,6 @@ button {
   top: 138px;
   z-index: 1;
   width: 470px;
-  height: 362px;
-
 }
 
 
@@ -279,7 +279,7 @@ button {
 
 .ad-top__text--style-3 {
   margin-top: 16px;
-  margin-bottom: 26px;
+  margin-bottom: 20px;
   font-size: 14px;
   font-weight: 300;
   font-style: italic;
@@ -298,6 +298,7 @@ button {
   letter-spacing: 0.01em;
   text-transform: uppercase;
   color: #111111;
+  cursor: pointer;
 }
 
 .open-more::after {
@@ -1015,6 +1016,7 @@ button {
   display: flex;
   justify-content: space-between;
   margin: 0;
+  margin-bottom: 30px;
   padding: 0;
 }
 
@@ -1310,4 +1312,8 @@ button {
   flex-direction: row;
   margin-top: 60px;
   margin-bottom: 45px;
+}
+
+.ad__inner--position {
+  position: relative;
 }
