--- a/style-homepage-mstore.css
+++ b/style-homepage-mstore.css
@@ -180,12 +180,12 @@ button {
   height: 65px;
   vertical-align: middle;
   font-size: 14px;
+  text-transform: uppercase;
   text-decoration: none;
   color: #464646;
   box-sizing: border-box;
   border: 4px solid rgba(0, 0, 0, 0);
-  transition-duration: 0.3s, 0.2s;
-  transition-property: color. border;
+  transition-duration: 0.2s;
 }
 
 .header-nav__item a:hover,
@@ -378,6 +378,10 @@ button {
   background-repeat: no-repeat;
   background-position: center;
   content: "";
+}
+
+.main-info__list h3 {
+  text-transform: uppercase;
 }
 
 .main-info__support::before {
